# django-tee-generator

./: .gitignore  README.md  boot_django.py  boot_urls.py  load_tests.py  setup.cfg
tee/: apps.py  urls.py  views.py
