[metadata]
name = django-tee-generator
version = 0.9.1
description = An application to generate images of t-shirts
long_description = file:README.md
long_description_content_type = text/markdown
url = https://github.com/poitch/django-tee-generator
license = MIT
classifiers =
    Environment :: Web Environment
    Intended Audience :: Developers
    License :: OSI Approved :: MIT
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Topic :: Software Development :: Libraries :: Application Frameworks
    Topic :: Software Development :: Libraries :: Python Modules

[options]
include_package_data = true
python_requires = >=3.7
setup_requires =
    setuptools >= 38.3.0
install_requires =
    Django >= 3.0
    Pillow >= 8.0


